Fixed a bug where the scrollbar for grid modules would not be visible when loading the module while having another module active

--- a/FrontEnd/Core/Scss/masterpage.scss
+++ b/FrontEnd/Core/Scss/masterpage.scss
@@ -895,12 +895,14 @@ main {
         bottom: 0;
 
         > iframe {
+            position: absolute;
             border: 0;
             height: 100%;
             width: 100%;
 
             &:not(.active) {
-                display: none;
+                visibility: hidden;
+                pointer-events: none;
             }
         }
     }
